# ultrafeedparser

./: .gitignore  Cargo.toml  README.md  python_test.py  setup.py
.github/workflows/: main.yml  package-release.yml
bench/: README.md  atom10_test.py  json_test.py  requirements.txt  requirements2.txt  rss20_test.py  rss_test.py
src/: lib.rs
tests/: test_parse.py
ultrafeedparser/: __init__.py
