[package]
name = "ultrafeedparser"
version = "0.1.1"
authors = ["Krzysztof Klinikowski <kkszysiu@gmail.com>"]
edition = "2018"

[lib]
name = "ultrafeedparser"
crate-type = ["cdylib"]

[dependencies]
feed-rs = "1.2.0"
chrono = "0.4.23"

[dependencies.cpython]
version = "0.7.1"
default-features = false
